# receipt-processor

./: .gitignore  README.md  pyproject.toml
agent/: .env.example  README.md  main.py  pyproject.toml
files/: Expenses.xlsx
receipt_processor/: .env.example  README.md  pyproject.toml
receipt_processor/src/receipt_processor/: server.py
receipt_processor/src/receipt_processor/models/: __init__.py  product_identification.py  receipt_line_item.py  report_result.py
receipt_processor/src/receipt_processor/tools/: __init__.py  decode_receipt.py  generate_category_report.py  identify_product.py
receipt_processor/src/receipt_processor/utils/: __init__.py  sheets.py
