[project]
name = "agent"
version = "0.1.0"
description = "OpenAI Agents harness for receipt_processor"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.0.17",
    "arcadepy>=1.4.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
